infrastructure/production/traefik/config/external-services/nashorn-proxmox-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nashorn-proxmox
---
apiVersion: v1
kind: Service
metadata:
  name: nashorn-proxmox-service
  namespace: nashorn-proxmox
spec:
  ports:
    - name: nashorn-proxmox
      port: 8006
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nashorn-proxmox-service
  namespace: nashorn-proxmox
subsets:
  - addresses:
      - ip: 192.168.178.40
    ports:
      - name: nashorn-proxmox
        port: 8006
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nashorn-proxmox-ingress
  namespace: nashorn-proxmox
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nashorn.lan.vandelocht.uk`)
      kind: Rule
      middlewares:
        - name: svc-nashorn-proxmox-headers
          namespace: nashorn-proxmox
      services:
        - name: nashorn-proxmox-service
          kind: Service
          namespace: nashorn-proxmox
          port: 8006
  tls:
    secretName: nashorn-lan-vandelocht-uk-production-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: svc-nashorn-proxmox-headers
  namespace: nashorn-proxmox
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
